tests/snapshots/serde__de_map_object_value.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[1, { b: true }]])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {
        I32(
            1,
        ): HeapReference(
            *1,
        ),
    },
    1: Object {
        OneByte("b"): Bool(
            true,
        ),
    },
}

