tests/snapshots/serde__de_map_two_elements.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[\"a\", 1], [\"b\", 2]])"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Map {
        String(
            OneByte("a"),
        ): I32(
            1,
        ),
        String(
            OneByte("b"),
        ): I32(
            2,
        ),
    },
}

