tests/snapshots/serde__de_null.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnull"
---
=== VALUE ===
Null

=== HEAP ===
Heap {}

