tests/snapshots/serde__de_number_primitive.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(1)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        1.0,
    ),
}

