tests/snapshots/serde__de_number_primitive_infinity_neg.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(-Infinity)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        -inf,
    ),
}

