tests/snapshots/serde__de_number_primitive_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(1.7976931348623157e+308)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        1.7976931348623157e308,
    ),
}

