tests/snapshots/serde__de_number_primitive_min.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(5e-324)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        5e-324,
    ),
}

