tests/snapshots/serde__de_number_primitive_nan.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(NaN)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: NumberObject(
        NaN,
    ),
}

